--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,30 +81,15 @@ jobs:
       - name: Write version to version.py
         run: echo "__version__ = '${{ steps.version.outputs.version }}'" > version.py
 
-      - name: Build Intel binary
+      - name: Build macOS Intel-only app (Rosetta compatible)
         run: |
-          arch -x86_64 python3 -m PyInstaller DB_mgr_GUI.py --windowed --icon=icon.icns --name DBMgrGUI_x86
-        env:
-          ARCHFLAGS: "-arch x86_64"
+          pyinstaller DB_mgr_GUI.py --windowed --icon=icon.icns --name DBMgrGUI
 
-      - name: Build ARM binary
+      - name: Package .app into DMG
         run: |
-          arch -arm64 python3 -m PyInstaller DB_mgr_GUI.py --windowed --icon=icon.icns --name DBMgrGUI_arm
-        env:
-          ARCHFLAGS: "-arch arm64"
-
-      - name: Create Universal Binary
-        run: |
-          mkdir -p dist/universal
-          lipo -create dist/DBMgrGUI_x86/DBMgrGUI_x86 dist/DBMgrGUI_arm/DBMgrGUI_arm -output dist/universal/DBMgrGUI
-
-      - name: Package Universal .app and DMG
-        run: |
-          mkdir -p dist/DBMgrGUI.app/Contents/MacOS
-          mkdir -p dist/DBMgrGUI.app/Contents/Resources
-          cp dist/universal/DBMgrGUI dist/DBMgrGUI.app/Contents/MacOS/DBMgrGUI
-          cp icon.icns dist/DBMgrGUI.app/Contents/Resources/icon.icns
-          hdiutil create -volname DBMgrGUI-${{ steps.version.outputs.version }} -srcfolder dist/DBMgrGUI.app -ov -format UDZO DBMgrGUI_${{ steps.version.outputs.version }}.dmg
+          hdiutil create -volname DBMgrGUI-${{ steps.version.outputs.version }} \
+                         -srcfolder dist/DBMgrGUI.app \
+                         -ov -format UDZO DBMgrGUI_${{ steps.version.outputs.version }}.dmg
 
       - name: Upload macOS DMG to Release
         uses: softprops/action-gh-release@v2
