pyinstaller add --clean --noupx 此程式為開源工具，使用 Python + PyInstaller 編譯，非病毒。 來源: https://github.com/YOUR_USERNAME/YOUR_PROJECT 用途: 用於文字轉換及 docx 分析 如有誤報請聯繫：your_email@example.com

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build Windows EXE
         run: |
-          pyinstaller DB_mgr_GUI.py --onefile --windowed --icon=icon.ico --name DB_mgr_GUI_${{ steps.version.outputs.version }}
+          pyinstaller DB_mgr_GUI.py --onefile --clean --noupx --windowed --icon=icon.ico --name DB_mgr_GUI_${{ steps.version.outputs.version }}
 
       - name: Upload Windows EXE to Release
         uses: softprops/action-gh-release@v2
@@ -97,3 +97,7 @@ jobs:
           files: DBMgrGUI_${{ steps.version.outputs.version }}.dmg
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Add README inside app bundle
+        run: cp README.txt dist/DBMgrGUI.app/Contents/Resources/
+
