--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.18
 aiosignal==1.3.2
+altgraph==0.17.4
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
@@ -29,12 +30,16 @@ multidict==6.4.3
 nicegui==2.15.0
 numpy==2.2.5
 orjson==3.10.16
+packaging==25.0
+pefile==2023.2.7
 pillow==11.2.1
 propcache==0.3.1
 pscript==0.7.7
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.4
 PySide6==6.9.0
 PySide6_Addons==6.9.0
 PySide6_Essentials==6.9.0
@@ -43,8 +48,10 @@ python-dotenv==1.1.0
 python-engineio==4.12.0
 python-multipart==0.0.20
 python-socketio==5.13.0
+pywin32-ctypes==0.2.3
 PyYAML==6.0.2
 requests==2.32.3
+setuptools==80.9.0
 shiboken6==6.9.0
 simple-websocket==1.1.0
 sniffio==1.3.1
